--- a/src/styles/blocks/news-card.css
+++ b/src/styles/blocks/news-card.css
@@ -1,7 +1,36 @@
 /* News Card */
 
 .news-card {
+	position: relative;
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	row-gap: 0.5rem;
+}
+
+.news-card__cover {
+	outline: 1px solid var(--color-border-secondary);
+	outline-offset: -1px;
+}
+
+.news-card__title {
+	margin: 0;
+	text-wrap: balance;
+	font-weight: normal;
+	font-family: var(--font-family-heading);
+	font-stretch: expanded;
+
 	a {
 		color: var(--color-link-normal);
+		text-decoration: none;
+
+		&::before {
+			position: absolute;
+			inset: 0;
+			content: '';
+		}
 	}
+}
+
+.news-card__date {
+	color: var(--color-text-secondary);
 }
