--- a/src/styles/color/index.css
+++ b/src/styles/color/index.css
@@ -1,4 +1,5 @@
 @import 'background.css';
+@import 'border.css';
 @import 'text.css';
 @import 'link.css';
 
@@ -11,23 +12,23 @@
 /* Basic */
 
 :root {
-	--color-basic-100: #ffffff;
-	--color-basic-200: #f0f1f2;
-	--color-basic-300: #d4d7d9;
-	--color-basic-400: #8b9399;
-	--color-basic-500: #4a5559;
-	--color-basic-600: #1a2428;
-	--color-basic-700: #000000;
+	--color-basic-100: oklch(100% 0 0);
+	--color-basic-200: oklch(95% 0.01 240);
+	--color-basic-300: oklch(85% 0.01 240);
+	--color-basic-400: oklch(62% 0.01 240);
+	--color-basic-500: oklch(37% 0.01 240);
+	--color-basic-600: oklch(17% 0.01 240);
+	--color-basic-700: oklch(0% 0 0);
 }
 
 /* Special */
 
 :root {
-	--color-lime: #c6f523;
-	--color-pear: #afe63a;
-	--color-moss: #81c36d;
-	--color-teal: #61afb4;
-	--color-aqua: #61afb4;
-	--color-azure: #3b84bb;
-	--color-navy: #386d9b;
+	--color-lime: oklch(90% 0.20 130);
+	--color-pear: oklch(87% 0.17 130);
+	--color-moss: oklch(74% 0.12 140);
+	--color-teal: oklch(68% 0.09 200);
+	--color-aqua: oklch(65% 0.12 230);
+	--color-azure: oklch(55% 0.11 240);
+	--color-navy: oklch(48% 0.10 240);
 }
