--- a/src/pages/tags/index.njk
+++ b/src/pages/tags/index.njk
@@ -1,14 +1,24 @@
 <h1>News with the “{{ tag }}” tag</h1>
 
-<ul>
+<ul class="news-list">
 {%- for item in collections[tag] %}
-	<li>
-		<a href="{{ item.url }}">
-			{{- item.data.title -}}
-		</a>
-		<time datetime="{{ item.date | dateISO }}">
-			{{- item.date | dateLong -}}
-		</time>
+	<li class="news-list__item">
+		<article class="news-card">
+			<img
+				class="news-card__cover"
+				src="{{ item.url }}/cover.avif"
+				width="960" height="540"
+				alt="{{ item.data.alt }}"
+			>
+			<h2 class="news-card__title">
+				<a href="{{ item.url }}">
+					{{- item.data.title -}}
+				</a>
+			</h2>
+			<time class="news-card__date" datetime="{{ item.date | dateISO }}">
+				{{- item.date | dateLong -}}
+			</time>
+		</article>
 	</li>
 {%- endfor %}
 </ul>
