--- a/src/styles/font/dewi.css
+++ b/src/styles/font/dewi.css
@@ -1,4 +1,6 @@
-/* Dewi Regular (Latin) */
+/* Dewi */
+
+/* Regular (Latin) */
 
 @font-face {
 	font-weight: normal;
@@ -9,7 +11,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Dewi Regular (Latin Extended) */
+/* Regular (Latin Extended) */
 
 @font-face {
 	font-weight: normal;
@@ -20,7 +22,7 @@
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* Dewi Bold (Latin) */
+/* Bold (Latin) */
 
 @font-face {
 	font-weight: bold;
@@ -31,7 +33,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Dewi Bold (Latin Extended) */
+/* Bold (Latin Extended) */
 
 @font-face {
 	font-weight: bold;
@@ -53,7 +55,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Dewi Italic (Latin Extended) */
+/* Italic (Latin Extended) */
 
 @font-face {
 	font-weight: normal;
@@ -64,7 +66,7 @@
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* Dewi Expanded Regular (Latin) */
+/* Expanded Regular (Latin) */
 
 @font-face {
 	font-weight: normal;
@@ -76,7 +78,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Dewi Expanded Regular (Latin Extended) */
+/* Expanded Regular (Latin Extended) */
 
 @font-face {
 	font-weight: normal;
@@ -88,7 +90,7 @@
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* Dewi Expanded Bold (Latin) */
+/* Expanded Bold (Latin) */
 
 @font-face {
 	font-weight: bold;
@@ -100,7 +102,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Dewi Expanded Bold (Latin Extended) */
+/* Expanded Bold (Latin Extended) */
 
 @font-face {
 	font-weight: bold;
