--- a/src/styles/font/rostin.css
+++ b/src/styles/font/rostin.css
@@ -1,4 +1,6 @@
-/* Rostin Regular (Latin) */
+/* Rostin */
+
+/* Regular (Latin) */
 
 @font-face {
 	font-weight: normal;
@@ -9,7 +11,7 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/* Rostin Regular (Latin Extended) */
+/* Regular (Latin Extended) */
 
 @font-face {
 	font-weight: normal;
