--- a/src/styles/blocks/news-list.css
+++ b/src/styles/blocks/news-list.css
@@ -8,10 +8,7 @@
 	row-gap: 2rem;
 	column-gap: 1rem;
 	margin: 0;
-	padding: 1rem max(
-		1rem,
-		calc((100vw - 1200px) / 2)
-	);
+	padding: 0;
 	list-style: none;
 }
 
