Fix double slash

--- a/src/pages/tags/index.njk
+++ b/src/pages/tags/index.njk
@@ -6,7 +6,7 @@
 		<article class="news-card">
 			<img
 				class="news-card__cover"
-				src="{{ item.url }}/cover.avif"
+				src="{{ item.url }}cover.avif"
 				width="960" height="540"
 				alt="{{ item.data.alt }}"
 			>
