--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -2,31 +2,47 @@
 
 .header {
 	display: grid;
-	grid-template-columns: auto 1fr;
 	padding: 1rem max(
 		1rem,
 		calc((100vw - 1200px) / 2)
 	);
 	border-bottom: 1px solid var(--color-border-secondary);
+
+	@media (width < 545px) {
+		grid-template-columns: 48px 1fr;
+		grid-template-areas:
+			'logo logo'
+			'.    links';
+		row-gap: 1rem;
+		column-gap: 0.75rem;
+	}
+
+	@media (width >= 545px) {
+		grid-template-columns: auto 1fr;
+		grid-template-areas: 'logo links';
+		align-items: center;
+		column-gap: 1rem;
+	}
 }
 
-/* Link */
+/* Logo */
 
-.header__link {
+.header__logo {
 	display: grid;
 	grid-template-columns: 48px 1fr;
 	grid-template-areas:
 		'logo title'
 		'logo subtitle';
+	grid-area: logo;
 	row-gap: 0.25rem;
 	column-gap: 0.75rem;
 	color: var(--color-text-primary);
 	text-decoration: none;
 }
 
-/* Logo */
+/* Image */
 
-.header__logo {
+.header__image {
 	grid-area: logo;
 	filter: drop-shadow(
 		0 2px 5px
@@ -52,4 +68,56 @@
 	grid-area: subtitle;
 	margin: 0;
 	font-size: 1rem;
+}
+
+/* Links */
+
+.header__links {
+	display: grid;
+	grid-template-columns: repeat(4, 32px);
+	grid-area: links;
+	gap: 0.5rem;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+
+	@media (width >= 545px) {
+		justify-self: end;
+	}
+
+	li {
+		display: contents;
+	}
+
+	a {
+		border-radius: 50%;
+		background-color: var(--color-link-normal);
+
+		&::before {
+			display: block;
+			width: 32px;
+			height: 32px;
+			background-color: light-dark(
+				var(--color-basic-100),
+				var(--color-basic-700)
+			);
+			content: '';
+		}
+
+		&[data-social="mastodon"]::before {
+			mask-image: url('../../images/social/mastodon.svg');
+		}
+
+		&[data-social="bluesky"]::before {
+			mask-image: url('../../images/social/bluesky.svg');
+		}
+
+		&[data-social="x"]::before {
+			mask-image: url('../../images/social/x.svg');
+		}
+
+		&[data-social="rss"]::before {
+			mask-image: url('../../images/social/rss.svg');
+		}
+	}
 }
