--- a/src/pages/feed/index.njk
+++ b/src/pages/feed/index.njk
@@ -17,6 +17,7 @@
 			<updated>{{ item.date | dateToRfc3339 }}</updated>
 			<id>{{ meta.domain + item.url }}</id>
 			<content type="html">
+				&lt;img src="{{ meta.domain + item.url }}cover.avif" width="960" height="540" alt="{{ item.data.alt }}"&gt;
 				{{- item.templateContent -}}
 				&lt;p&gt;
 					&lt;a href="{{ item.data.link }}"&gt;
