Add more footer links

--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -44,8 +44,14 @@
 	</main>
 
 	<footer class="footer">
+		<a href="https://github.com/web-standards/web-standards.dev">
+			Source code
+		</a>
 		<a href="mailto:hi@web-standards.dev">
 			hi@web-standards.dev
+		</a>
+		<a href="https://www.11ty.dev/">
+			Powered by 11ty
 		</a>
 	</footer>
 </body>
