--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -2,7 +2,7 @@
 <html class="page" lang="{{ meta.language }}">
 <head>
 	<meta charset="utf-8">
-	<title>{{ meta.title }}</title>
+	<title>{{ (title + ' — ') if title }}{{ meta.title }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="/styles/index.css">
