--- a/src/layouts/news.njk
+++ b/src/layouts/news.njk
@@ -31,6 +31,7 @@ layout: page.njk
 	</div>
 
 	<p class="news__tags">
+		Tags:
 	{% for tag in tags %}
 		<a href="/tags/{{ tag }}/">{{ tag }}</a>
 	{% endfor %}
