--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -7,5 +7,6 @@
 @import 'news-card.css';
 @import 'news.css';
 @import 'related.css';
+@import 'pagination.css';
 @import 'content.css';
 @import 'footer.css';
