--- a/src/layouts/news.njk
+++ b/src/layouts/news.njk
@@ -18,6 +18,7 @@ layout: page.njk
 		class="news__cover"
 		src="{{ page.url }}cover.avif"
 		width="960" height="540"
+		fetchpriority="high"
 		alt="{{ alt }}"
 	>
 
