--- a/src/pages/home/index.njk
+++ b/src/pages/home/index.njk
@@ -6,6 +6,7 @@
 				class="news-card__cover"
 				src="{{ item.url }}cover.avif"
 				width="960" height="540"
+				fetchpriority="high"
 				alt="{{ item.data.alt }}"
 			>
 			<h2 class="news-card__title">
