Preload main fonts

--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -7,6 +7,10 @@
 
 	<link rel="stylesheet" href="/styles/index.css">
 
+	<link rel="preload" href="/fonts/dewi-regular-latin.woff2" crossorigin as="font" type="font/woff2">
+	<link rel="preload" href="/fonts/dewi-expanded-regular-latin.woff2" crossorigin as="font" type="font/woff2">
+	<link rel="preload" href="/fonts/dewi-expanded-bold-latin.woff2" crossorigin as="font" type="font/woff2">
+
 	<link rel="canonical" href="{{ meta.domain + page.url }}">
 	<link rel="me" href="https://mastodon.social/@webstandards_dev">
 	<meta name="fediverse:creator" content="@webstandards_dev@mastodon.social">
