Add two-column layout for news

--- a/src/layouts/news.njk
+++ b/src/layouts/news.njk
@@ -22,7 +22,7 @@ layout: page.njk
 		alt="{{ alt }}"
 	>
 
-	<div class="content">
+	<div class="news__content content">
 		{{ content | safe }}
 		<p>
 			<a href="{{ link }}" target="_blank">
