--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -2,6 +2,15 @@
 
 .news {
 	padding-bottom: 2rem;
+
+	@media (width >= 1024px) {
+		display: grid;
+		grid-template-areas:
+			'header  cover'
+			'content cover'
+			'tags    cover';
+		column-gap: 1rem;
+	}
 }
 
 /* Header */
@@ -10,6 +19,10 @@
 	display: grid;
 	row-gap: 0.25rem;
 	margin-bottom: 1rem;
+
+	@media (width >= 1024px) {
+		grid-area: header;
+	}
 }
 
 /* Title */
@@ -38,6 +51,10 @@
 	display: block;
 	outline: 1px solid var(--color-border-secondary);
 	outline-offset: -1px;
+
+	@media (width >= 1024px) {
+		grid-area: cover;
+	}
 }
 
 /* Tags */
@@ -45,5 +62,9 @@
 .news__tags {
 	a {
 		color: var(--color-link-normal);
+	}
+
+	@media (width >= 1024px) {
+		grid-area: tags;
 	}
 }
