--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -1,10 +1,10 @@
 /* News */
 
 .news {
-	padding-bottom: 2rem;
+	display: grid;
+	row-gap: 1rem;
 
 	@media (width >= 1024px) {
-		display: grid;
 		grid-template-areas:
 			'header  cover'
 			'content cover'
@@ -18,7 +18,6 @@
 .news__header {
 	display: grid;
 	row-gap: 0.25rem;
-	margin-bottom: 1rem;
 
 	@media (width >= 1024px) {
 		grid-area: header;
@@ -60,6 +59,8 @@
 /* Tags */
 
 .news__tags {
+	margin: 0;
+
 	a {
 		color: var(--color-link-normal);
 	}
