--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -15,6 +15,7 @@
 	<link rel="me" href="https://mastodon.social/@webstandards_dev">
 	<meta name="fediverse:creator" content="@webstandards_dev@mastodon.social">
 
+	<meta name="description" content="{{ meta.subtitle }}">
 	<meta name="generator" content="{{ eleventy.generator }}">
 
 	<link rel="alternate" type="application/atom+xml" href="{{ meta.domain }}/feed/" title="{{ meta.title }}">
