--- a/src/includes/news-card.njk
+++ b/src/includes/news-card.njk
@@ -1,17 +1,16 @@
 {% macro newsCard(news) %}
 	<article class="news-card">
 		<img
-			class="news-card__cover"
 			src="{{ news.url }}cover.avif"
 			width="960" height="540"
 			alt="{{ news.data.alt }}"
 		>
-		<h2 class="news-card__title">
+		<h2>
 			<a href="{{ news.url }}">
 				{{- news.data.title -}}
 			</a>
 		</h2>
-		<time class="news-card__date" datetime="{{ news.date | dateISO }}">
+		<time datetime="{{ news.date | dateISO }}">
 			{{- news.date | dateShort -}}
 		</time>
 	</article>
