--- a/src/styles/blocks/footer.css
+++ b/src/styles/blocks/footer.css
@@ -9,6 +9,7 @@
 	border-top: 1px solid var(--color-border-secondary);
 
 	@media (width < 520px) {
+		align-content: start;
 		justify-items: start;
 		row-gap: 1rem;
 	}
