--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -5,6 +5,7 @@
 	row-gap: 1rem;
 
 	@media (width >= 1024px) {
+		grid-template-columns: 1fr 1fr;
 		grid-template-areas:
 			'header  cover'
 			'content cover'
@@ -47,12 +48,14 @@
 /* Cover */
 
 .news__cover {
-	display: block;
-	outline: 1px solid var(--color-border-secondary);
-	outline-offset: -1px;
-
 	@media (width >= 1024px) {
 		grid-area: cover;
+	}
+
+	img {
+		display: block;
+		outline: 1px solid var(--color-border-secondary);
+		outline-offset: -1px;
 	}
 }
 
