--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -7,6 +7,7 @@
 @import 'news-card.css';
 @import 'news.css';
 @import 'tag.css';
+@import 'not-found.css';
 @import 'related.css';
 @import 'pagination.css';
 @import 'content.css';
