--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -6,7 +6,7 @@
 @import 'news-list.css';
 @import 'news-card.css';
 @import 'news.css';
-@import 'tag.css';
+@import 'archive.css';
 @import 'not-found.css';
 @import 'related.css';
 @import 'pagination.css';
