--- a/src/pages/tags/index.njk
+++ b/src/pages/tags/index.njk
@@ -5,7 +5,7 @@
 	<ul class="news-list">
 	{%- for item in collections[tag] | reverse %}
 		<li>
-			{{ newsCard(news=item) }}
+			{{ newsCard(news=item, fetchpriority='high' if loop.index <= 4 else '') }}
 		</li>
 	{%- endfor %}
 	</ul>
