--- a/src/pages/tags/index.njk
+++ b/src/pages/tags/index.njk
@@ -4,9 +4,11 @@
 	<h1 class="archive__title">News with the “{{ tag }}” tag</h1>
 	<ul class="news-list">
 	{%- for item in collections[tag] | reverse %}
+		{%- if item.data.permalink !== false %}
 		<li>
 			{{ newsCard(news=item, fetchpriority='high' if loop.index <= 4 else '') }}
 		</li>
+		{%- endif %}
 	{%- endfor %}
 	</ul>
 </div>
