Update the follow message

--- a/src/pages/feed/index.njk
+++ b/src/pages/feed/index.njk
@@ -25,7 +25,7 @@
 	&lt;/a&gt;
 &lt;/p&gt;
 &lt;p&gt;
-	Follow us on
+	You can also follow us on
 	{% for link in social -%}
 		&lt;a href="{{ link.url }}"&gt;{{ link.name }}&lt;/a&gt;
 		{{- ', ' if not loop.last -}}
